add setting for not using pybind11 and python3

--- a/Makefile.choreonoid
+++ b/Makefile.choreonoid
@@ -13,6 +13,9 @@ GIT_REVISION = master
 CMAKE_BUILD_TYPE = Release
 # for simulator in choreonoid
 ENABLE_CORBA = ON
+USE_PYBIND11 = OFF
+USE_PYTHON3 = OFF
+
 BUILD_CORBA_PLUGIN = ON
 BUILD_OPENRTM_PLUGIN = ON
 
@@ -35,7 +38,7 @@ installed.choreonoid: $(GIT_DIR) # $(SOURCE_DIR)/unpacked
 	@echo "                 PATH=$(PATH)"
 	@echo "                 INSTALL_DIR=$(INSTALL_DIR)"
 	@echo "                 GIT_DIR=$(GIT_DIR)"
-	cd $(GIT_DIR) && cmake . -DCMAKE_INSTALL_PREFIX=$(INSTALL_DIR) -DENABLE_INSTALL_RPATH=ON -DCMAKE_BUILD_TYPE=$(CMAKE_BUILD_TYPE) -DENABLE_CORBA=$(ENABLE_CORBA) -DBUILD_CORBA_PLUGIN=$(BUILD_CORBA_PLUGIN) -DBUILD_OPENRTM_PLUGIN=$(BUILD_OPENRTM_PLUGIN) -DBUILD_HELLO_WORLD_SAMPLE=$(BUILD_HELLO_WORLD_SAMPLE) -DBUILD_SPRING_MODEL_SAMPLE=$(BUILD_SPRING_MODEL_SAMPLE) && make -j 4 && make install
+	cd $(GIT_DIR) && cmake . -DCMAKE_INSTALL_PREFIX=$(INSTALL_DIR) -DENABLE_INSTALL_RPATH=ON -DCMAKE_BUILD_TYPE=$(CMAKE_BUILD_TYPE) -DENABLE_CORBA=$(ENABLE_CORBA) -DUSE_PYBIND11=$(USE_PYBIND11) -DUSE_PYTHON3=$(USE_PYTHON3) -DBUILD_CORBA_PLUGIN=$(BUILD_CORBA_PLUGIN) -DBUILD_OPENRTM_PLUGIN=$(BUILD_OPENRTM_PLUGIN) -DBUILD_HELLO_WORLD_SAMPLE=$(BUILD_HELLO_WORLD_SAMPLE) -DBUILD_SPRING_MODEL_SAMPLE=$(BUILD_SPRING_MODEL_SAMPLE) && make -j 4 && make install
 	touch installed.choreonoid
 
 clean.choreonoid:
